lib_LTLIBRARIES = libgstv4l2timecodemeta-@GST_API_VERSION@.la

libgstv4l2timecodemeta_@GST_API_VERSION@_la_SOURCES = \
    gstv4l2timecodemeta.c

libgstv4l2timecodemeta_@GST_API_VERSION@includedir = $(includedir)/gstreamer-@GST_API_VERSION@/gst/v4l2

libgstv4l2timecodemeta_@GST_API_VERSION@include_HEADERS = \
    gstv4l2timecodemeta.h

libgstv4l2timecodemeta_@GST_API_VERSION@_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)

libgstv4l2timecodemeta_@GST_API_VERSION@_la_LIBADD = $(GST_BASE_LIBS) $(GST_LIBS) $(LIBM)
libgstv4l2timecodemeta_@GST_API_VERSION@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_ALL_LDFLAGS) $(GST_LT_LDFLAGS)
